--- a/codewizards-spellbook/package.json
+++ b/codewizards-spellbook/package.json
@@ -13,9 +13,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "framer-motion": "^12.23.12",
-    "next": "15.5.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "15.5.2"
+},
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
